force-app/main/default/objects/Referrer_Portal_Logs__c/Referrer_Portal_Logs__c.object-meta.xml
<CustomObject>
    <label>Referrer Portal Logs</label>
    <nameField>
        <displayFormat>Log-{00000}</displayFormat>
        <label>Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Referrer Portal Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>