force-app/main/default/objects/Referrer_Portal_Logs__c/fields/Log_in_Time__c.field-meta.xml
<CustomField>
    <fullName>Log_in_Time__c</fullName>
    <label>Log in Time</label>
    <type>DateTime</type>
</CustomField>