force-app/main/default/objects/Referrer_Portal_Logs__c/fields/Referrer_Account__c.field-meta.xml
<CustomField>
    <fullName>Referrer_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referrer Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Referrer Portal Logs</relationshipLabel>
    <relationshipName>Referrer_Portal_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>