force-app/main/default/objects/Referrer_Portal_Logs__c/fields/Referrer_Name__c.field-meta.xml
<CustomField>
    <fullName>Referrer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referrer Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Referrer_Portal_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>