force-app/main/default/objects/Referrer_Portal_Logs__c/fields/Type_of_login__c.field-meta.xml
<CustomField>
    <fullName>Type_of_login__c</fullName>
    <label>Type of login</label>
    <length>250</length>
    <type>Text</type>
</CustomField>